# postman-to-markdown

./: README.md  pyproject.toml
postman_to_markdown/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
tests/fixtures/: sample_collection.json
