[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postman-to-markdown"
version = "0.1.0"
description = "Turn a Postman Collection export into clean, committable Markdown API docs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["postman", "markdown", "api", "documentation", "openapi", "docs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
postman-to-markdown = "postman_to_markdown.cli:main"

[project.urls]
Homepage = "https://github.com/saifullah4khan/postman-to-markdown"
Issues = "https://github.com/saifullah4khan/postman-to-markdown/issues"

[tool.setuptools]
packages = ["postman_to_markdown"]
